# hungrydungeon-rs

./: Cargo.toml  progress.md  readme.md
design/: actions.md  actors.md  index.md  organs.md  prey.md  rooms.md  summary.md
design/ai/: brainbehaviors.md  index.md
src/: actors.rs  bot.rs  components.rs  game.rs  input_parsing.rs  main.rs  rooms.rs
src/actors/: ai.rs  organs.rs
src/actors/ai/: slime.rs  slimegirl.rs
src/game/: actors.rs  connections.rs  decision_table.rs  input_parsing.rs  rooms.rs
src/game/actors/: ai.rs  organs.rs  player.rs
src/game/actors/ai/: slime.rs  slimegirl.rs
src/game/actors/player/: parse_input.rs  process_action.rs  process_input.rs
