[package]
name = "hungrydungeon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [ 
  "multi-threaded",
] }
rand = "0.8.5"
strfmt = "0.2.4"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true