[package]
name = "hungrydungeon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
bevy = { version = "0.13.0", default-features = false, features = [
] }
rand = "0.8.5"
strfmt = "0.2.4"
tokio = {version = "1.36.0", features = ["full"]}

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
